--- a/docs/_releases/v4.0.48.md
+++ b/docs/_releases/v4.0.48.md
@@ -77,7 +77,7 @@ This **ServiceStack.Aws** NuGet package includes implementations for the followi
 
 > We'd like to give a big thanks to [Chad Boyd](https://github.com/boydc7) from Spruce Media for contributing the SqsMqServer implementation.
 
-## [AWS Live Examples](http://awsapps.servicestack.net/)
+## [AWS Live Examples](https://github.com/ServiceStackApps/AwsApps)
 
 To demonstrate the ease of which you can build AWS-powered solutions with ServiceStack we've rewritten 6 of our existing 
 [Live Demos](https://github.com/ServiceStackApps/LiveDemos) to use a pure AWS managed backend using:
@@ -87,7 +87,7 @@ To demonstrate the ease of which you can build AWS-powered solutions with Servic
  - [Amazon SQS](https://aws.amazon.com/sqs/) for background processing of MQ requests 
  - [Amazon SES](https://aws.amazon.com/ses/) for sending emails
  
-[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/aws/apps/screenshots/awsapps.png)](http://awsapps.servicestack.net/)
+[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/aws/apps/screenshots/awsapps.png)](https://github.com/ServiceStackApps/AwsApps)
 
 ### Simple AppHost Configuration
 
@@ -97,11 +97,11 @@ configuration for **5 different Apps** below utilizing all the AWS technologies 
 ASP.NET Web Application where each application's UI and back-end Service implementation are encapsulated under 
 their respective sub directories:
 
-  - [/awsath](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/awsauth) -> [awsapps.servicestack.net/awsauth/](http://awsapps.servicestack.net/awsauth/)
-  - [/emailcontacts](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/emailcontacts) -> [awsapps.servicestack.net/emailcontacts/](http://awsapps.servicestack.net/emailcontacts/)
-  - [/imgur](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/imgur) -> [awsapps.servicestack.net/imgur/](http://awsapps.servicestack.net/imgur/)
-  - [/restfiles](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/restfiles) -> [awsapps.servicestack.net/restfiles/](http://awsapps.servicestack.net/restfiles/)
-  - [/todo](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/todo) -> [awsapps.servicestack.net/todo/](http://awsapps.servicestack.net/todo/)
+  - [/awsath](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/awsauth)
+  - [/emailcontacts](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/emailcontacts)
+  - [/imgur](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/imgur)
+  - [/restfiles](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/restfiles)
+  - [/todo](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/todo)
 
 ## [AWS Razor Rockstars](http://awsrazor.servicestack.net/)
 
@@ -232,9 +232,9 @@ current time:
 > This forces a recompile of the modified views which greatly benefits from a fast CPU and is a bit slow on our 
 Live Demos server that's running on a **m1.small** instance shared with 25 other ASP.NET Web Applications. 
 
-## [AWS Imgur](http://awsapps.servicestack.net/imgur/)
+## [AWS Imgur](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/imgur)
 
-[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/aws/apps/screenshots/imgur.png)](http://awsapps.servicestack.net/imgur/)
+[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/aws/apps/screenshots/imgur.png)](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/imgur)
 
 ### S3VirtualPathProvider 
 
@@ -257,21 +257,21 @@ The benefit of using managed S3 File Storage is better scalability as your App S
 performance as overhead of serving static assets can be offloaded by referencing the S3 Bucket directly and for even 
 better responsiveness you can connect the S3 bucket to a CDN.
 
-## [REST Files](http://awsapps.servicestack.net/restfiles/)
+## [REST Files](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/restfiles)
 
-[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/aws/apps/screenshots/restfiles.png)](http://awsapps.servicestack.net/restfiles/)
+[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/aws/apps/screenshots/restfiles.png)](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/restfiles)
 
 REST Files GitHub-like explorer is another example that was 
 [rewritten to use ServiceStack's Virtual File System](https://github.com/ServiceStackApps/AwsApps/blob/master/src/AwsApps/restfiles/FilesService.cs)
 and now provides remote file management of an S3 Bucket behind a REST-ful API.
 
-## [AWS Email Contacts](http://awsapps.servicestack.net/emailcontacts/)
+## [AWS Email Contacts](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/emailcontacts)
 
-[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/aws/apps/screenshots/emailcontacts.png)](http://awsapps.servicestack.net/emailcontacts/)
+[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/aws/apps/screenshots/emailcontacts.png)](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/emailcontacts)
 
 ### SqsMqServer
 
-The [AWS Email Contacts](http://awsapps.servicestack.net/emailcontacts/) example shows the same long-running 
+The [AWS Email Contacts](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/emailcontacts) example shows the same long-running 
 [EmailContact Service](https://github.com/ServiceStackApps/AwsApps/blob/4817f5c6ad69defd74d528403bfdb03e5958b0b3/src/AwsApps/emailcontacts/EmailContactServices.cs#L81)
 being executed from both HTTP and MQ Server by just 
 [changing which url the HTML Form is posted to](https://github.com/ServiceStackApps/AwsApps/blob/4817f5c6ad69defd74d528403bfdb03e5958b0b3/src/AwsApps/emailcontacts/default.cshtml#L203):
@@ -322,13 +322,13 @@ When an MQ Server is registered, ServiceStack automatically publishes Requests a
 [pre-defined route](/routing#pre-defined-routes)
 to the registered MQ broker. The message is later picked up and executed by a Message Handler on a background Thread.
 
-## [AWS Auth](http://awsapps.servicestack.net/awsauth/)
+## [AWS Auth](https://github.com/ServiceStackApps/AwsApps)
 
-[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/aws/apps/screenshots/awsauth.png)](http://awsapps.servicestack.net/awsauth/)
+[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/aws/apps/screenshots/awsauth.png)](https://github.com/ServiceStackApps/AwsApps)
 
 ### DynamoDbAuthRepository
 
-[AWS Auth](http://awsapps.servicestack.net/awsauth/) 
+[AWS Auth](https://github.com/ServiceStackApps/AwsApps) 
 is an example showing how easy it is to enable multiple Auth Providers within the same App which allows Sign-Ins from 
 Twitter, Facebook, GitHub, Google, Yahoo and LinkedIn OAuth providers, as well as HTTP Basic and Digest Auth and 
 normal Registered User logins and Custom User Roles validation, all managed in DynamoDB Tables using 
@@ -399,9 +399,9 @@ foreach (var config in fileSettings.GetAll())
 
 ![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/release-notes/aws-configsettings.png)
 
-## [AWS Todos](http://awsapps.servicestack.net/todo/)
+## AWS Todos
 
-[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/aws/apps/screenshots/todos.png)](http://awsapps.servicestack.net/todo/)
+[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/aws/apps/screenshots/todos.png)](https://github.com/ServiceStackApps/AwsApps/tree/master/src/AwsApps/todo)
 
 The [Backbone TODO App](http://todomvc.com/examples/backbone/) is a famous minimal example used as a "Hello, World" 
 example to showcase and compare JavaScript client frameworks. The example also serves as a good illustration of the 
