update links to NETFX apps

--- a/docs/_releases/v4.0.30.md
+++ b/docs/_releases/v4.0.30.md
@@ -70,11 +70,11 @@ Install-Package ServiceStack.Client
 
 The [Hello PCL](https://github.com/ServiceStackApps/HelloMobile) project now contains examples of reusing a Server DTO project with all supported client platforms as well as showing re-use of a high-level `SharedGateway` which referenes `ServiceStack.Client` that's shared between all PCL-compatible platforms. 
 
-### New ServiceStack + AngularJS Example - [StackApis](http://stackapis.servicestack.net)
+### New ServiceStack + AngularJS Example - [StackApis](http://stackapis.netcore.io)
 
-[![StackApis Home](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/apps/StackApis/stackapis-home.png)](http://stackapis.servicestack.net/)
+[![StackApis Home](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/apps/StackApis/stackapis-home.png)](http://stackapis.netcore.io/)
 
-[StackApis](http://stackapis.servicestack.net/) is a simple new ServiceStack + AngularJS example project created with [ServiceStackVS AngularJS Template](https://github.com/ServiceStack/ServiceStackVS#servicestackvs) showcasing how quick and easy it is to create responsive feature-rich Single Page Apps with AngularJS and [AutoQuery](/autoquery). StackApis is powered by a Sqlite database containing [snapshot of ServiceStack questions from StackOverflow APIs](https://github.com/ServiceStackApps/StackApis/blob/master/src/StackApis.Tests/UnitTests.cs#L67) that's [persisted in an sqlite database](https://github.com/ServiceStackApps/StackApis/blob/master/src/StackApis.Tests/UnitTests.cs#L119-L124) using [OrmLite](https://github.com/ServiceStack/ServiceStack.OrmLite/).
+[StackApis](http://stackapis.netcore.io/) is a simple new ServiceStack + AngularJS example project created with [ServiceStackVS AngularJS Template](https://github.com/ServiceStack/ServiceStackVS#servicestackvs) showcasing how quick and easy it is to create responsive feature-rich Single Page Apps with AngularJS and [AutoQuery](/autoquery). StackApis is powered by a Sqlite database containing [snapshot of ServiceStack questions from StackOverflow APIs](https://github.com/ServiceStackApps/StackApis/blob/master/src/StackApis.Tests/UnitTests.cs#L67) that's [persisted in an sqlite database](https://github.com/ServiceStackApps/StackApis/blob/master/src/StackApis.Tests/UnitTests.cs#L119-L124) using [OrmLite](https://github.com/ServiceStack/ServiceStack.OrmLite/).
 
 ### StackApis AutoQuery Service
 
@@ -90,9 +90,9 @@ public class StackOverflowQuery : QueryBase<Question>
 
 > Not even `ScoreGreaterThan` is a required property, it's just an example of a [formalized convention](/autoquery#advantages-of-well-defined-service-contracts) enabling queries from Typed Service Clients.
 
-Feel free to play around with a deployed version of StackApis at [stackapis.servicestack.net](http://stackapis.servicestack.net/).
+Feel free to play around with a deployed version of StackApis at [stackapis.netcore.io](http://stackapis.netcore.io/).
 
-You can also use the public `http://stackapis.servicestack.net/` url to test out ServiceStack's new **Add ServiceStack Reference** feature :)
+You can also use the public `http://stackapis.netcore.io/` url to test out ServiceStack's new **Add ServiceStack Reference** feature :)
 
 ## [Swagger Support](/swagger-api)
 
@@ -102,9 +102,9 @@ ServiceStack's [Swagger Support](/swagger-api) received some welcomed enhancemen
 
 ### New Bootstrap theme for Swagger
 
-A new attractive Bootstrap Theme was also added to Swagger, available from [/swagger-ui-bootstrap/](http://stackapis.servicestack.net/swagger-ui-bootstrap/):
+A new attractive Bootstrap Theme was also added to Swagger, available from [/swagger-ui-bootstrap/](http://stackapis.netcore.io/swagger-ui-bootstrap/):
 
-[![Swagger Bootstrap](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/apps/StackApis/stackapis-swagger-bootstrap.png)](http://stackapis.servicestack.net/swagger-ui-bootstrap/)
+[![Swagger Bootstrap](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/apps/StackApis/stackapis-swagger-bootstrap.png)](http://stackapis.netcore.io/swagger-ui-bootstrap/)
 
 You can change the [metadata page plugin link](/metadata-page#adding-links-to-metadata-page) to point to this new theme with:
 
