--- a/docs/_releases/v4.0.31.md
+++ b/docs/_releases/v4.0.31.md
@@ -57,7 +57,7 @@ The above configuration will use Redis ServerEvents if there's a `RedisHost` **a
 
 ### Cross-platform Memory and Redis ServerEvent Enabled Chat.exe
 
-To showcase Redis ServerEvents in action, we've prepared a stand-alone [ServiceStack.Gap](https://github.com/ServiceStack/ServiceStack.Gap) version of [Chat](http://chat.servicestack.net) compiled down into a single **Chat.exe** that can run on either Windows and OSX with Mono which can be downloaded from: 
+To showcase Redis ServerEvents in action, we've prepared a stand-alone [ServiceStack.Gap](https://github.com/ServiceStack/ServiceStack.Gap) version of [Chat](http://chat.netcore.io) compiled down into a single **Chat.exe** that can run on either Windows and OSX with Mono which can be downloaded from: 
 
 ### [Chat.zip](https://github.com/ServiceStack/ServiceStack.Gap/raw/master/deploy/Chat.zip) (1.2MB)
 
@@ -100,7 +100,7 @@ PM> Install-Package ServiceStack.Client
 And like the Service Clients it requires the `BaseUri` of your ServiceStack instance as well as an optional `channel` for the client to subscribe to:
 
 ```csharp
-var client = new ServerEventsClient("http://chat.servicestack.net", channel:"home");
+var client = new ServerEventsClient("http://chat.netcore.io", channel:"home");
 ```
 
 ### Managed Connection
@@ -387,7 +387,7 @@ public class MyServices : Service
 }
 ```
 
-As Global Receivers handle other messages sent with the `cmd.*` selector and can be re-used as a named receiver, we can define a single class to handle all the different custom messages sent in [chat.servicestack.net](http://chat.servicestack.net) App, E.g:
+As Global Receivers handle other messages sent with the `cmd.*` selector and can be re-used as a named receiver, we can define a single class to handle all the different custom messages sent in [chat.netcore.io](http://chat.netcore.io) App, E.g:
 
 ```
 cmd.chat Hi
