--- a/docs/_releases/v4.0.32.md
+++ b/docs/_releases/v4.0.32.md
@@ -27,10 +27,10 @@ Updating a ServiceStack reference works intuitively where you can right-click on
 
 ### F# Client Example
 
-Just like with C#, F# Native Types can be used in ServiceStack's [Generic Service Clients](/csharp-client) providing and end-to-end Typed API whose PCL support also allows F# to be used in [mobile clients apps](https://github.com/ServiceStackApps/HelloMobile) as well. The basic [stackapis.servicestack.net](http://stackapis.servicestack.net/) Services example in F# looks like:
+Just like with C#, F# Native Types can be used in ServiceStack's [Generic Service Clients](/csharp-client) providing and end-to-end Typed API whose PCL support also allows F# to be used in [mobile clients apps](https://github.com/ServiceStackApps/HelloMobile) as well. The basic [stackapis.netcore.io](http://stackapis.netcore.io/) Services example in F# looks like:
 
 ```fsharp
-let client = new JsonServiceClient("http://stackapis.servicestack.net")
+let client = new JsonServiceClient("http://stackapis.netcore.io")
 let response = client.Get(new SearchQuestions(
     Tags = new List<string>([ "redis"; "ormlite" ])))        
 
