--- a/docs/_releases/v4.0.33.md
+++ b/docs/_releases/v4.0.33.md
@@ -406,7 +406,7 @@ to the remote ServiceStack instance, passing in the `?MakePartial=False` option 
 /* Options:
 Date: 2014-10-21 00:44:24
 Version: 1
-BaseUrl: http://stackapis.servicestack.net
+BaseUrl: http://stackapis.netcore.io
 
 MakePartial: False
 //MakeVirtual: True
