--- a/docs/_releases/v4.0.34.md
+++ b/docs/_releases/v4.0.34.md
@@ -278,9 +278,7 @@ The templates conveniently pre-configures the above libraries into a working out
 
 To help to get started with the **ReactJS App** VS.NET template and learn React, we've rewritten [ServiceStack Chat](https://github.com/ServiceStackApps/Chat) ServerEvents demo using [React](http://facebook.github.io/react/):
 
-[![React Chat](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/livedemos/chat-react.png)](http://react-chat.servicestack.net)
-
-> Live Demo: http://react-chat.servicestack.net
+![React Chat](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/livedemos/chat-react.png)
 
 ### [Intro to developing apps with React and Reflux](https://github.com/ServiceStackApps/Chat-React)
 
