--- a/docs/_releases/v4.0.35.md
+++ b/docs/_releases/v4.0.35.md
@@ -89,7 +89,7 @@ Multi-Channel subscriptions works conceptually similar to having multiple "singl
 
 With this feature, we can now create Chat Apps that support multiple Chat Rooms using only a single ServerEvents subscription: 
 
-[![React Multi-Channel Chat](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/livedemos/chat-react-multichannels.png)](http://react-chat.servicestack.net/?channels=home,work,play)
+![React Multi-Channel Chat](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/livedemos/chat-react-multichannels.png)
 
 > Multi-Channel React Chat preview
 
