--- a/docs/_releases/v4.0.42.md
+++ b/docs/_releases/v4.0.42.md
@@ -861,7 +861,7 @@ Emits the Executed SQL along with any DB Parameters:
 
 Setting `Config.AllowSessionIdsInHttpParams=true` will allow clients to specify the `ss-id`, `ss-pid` Session Cookies on the QueryString or FormData. This is useful for getting Authenticated SSE Sessions working in IE9 which needs to rely on SSE Polyfills that's unable to send Cookies or Custom HTTP Headers.
 
-The [SSE-polyfills Chat Demo](http://chat.servicestack.net/default_ieshim) has an example of adding the Current Session Id on the [JavaScript SSE EventSource Url](https://github.com/ServiceStackApps/Chat/blob/master/src/Chat/default_ieshim.cshtml#L93):
+The [SSE-polyfills Chat Demo](http://chat.netcore.io/default_ieshim) has an example of adding the Current Session Id on the [JavaScript SSE EventSource Url](https://github.com/ServiceStackApps/Chat/blob/master/src/Chat/default_ieshim.cshtml#L93):
 
 ```js
 var source = new EventSource('/event-stream?channels=@channels&ss-id=@(base.GetSession().Id)');
