--- a/docs/_releases/v4.0.46.md
+++ b/docs/_releases/v4.0.46.md
@@ -255,7 +255,7 @@ and the deep Integration possible from a Native App.
 The Redis React App has been packaged for multiple platforms inc. the ASP.NET Live Demo 
 [redisreact.servicestack.net](http://redisreact.servicestack.net/#/) deployed on AWS which you can use to preview Redis React 
 browsing a redis server populated with the 
-[Northwind Dataset](http://northwind.servicestack.net/) persisted as JSON following the
+[Northwind Dataset](http://northwind.netcore.io/) persisted as JSON following the
 [Complex Type Conventions](http://stackoverflow.com/a/8919931/85785) built into the 
 [C# ServiceStack.Redis Client](https://github.com/ServiceStack/ServiceStack.Redis).
 
