--- a/docs/_releases/v4.0.54.md
+++ b/docs/_releases/v4.0.54.md
@@ -57,15 +57,15 @@ As it's quick to add, we've already enabled it in a number of existing Live Demo
 ### Live Examples
 
 - http://github.servicestack.net/ss_admin/
-- http://northwind.servicestack.net/ss_admin/
-- http://stackapis.servicestack.net/ss_admin/
+- http://northwind.netcore.io/ss_admin/
+- http://stackapis.netcore.io/ss_admin/
 - http://techstacks.io/ss_admin/
 
 ### Default Minimal UI
 
 By default AutoQuery Services start with a minimal UI that uses the Request DTO name to identify the Query.
 An example of this can be seen with the 
-[Northwind AutoQuery Services](http://northwind.servicestack.net/ss_admin/autoquery/QueryCustomers) below:
+[Northwind AutoQuery Services](http://northwind.netcore.io/ss_admin/autoquery/QueryCustomers) below:
 
 ```csharp
 [Route("/query/customers")]
@@ -77,7 +77,7 @@ public class QueryOrders : QueryBase<Order> {}
 
 Which renders a UI with the default query and initial fields unpopulated:
 
-[![](https://raw.githubusercontent.com/ServiceStack/Admin/master/img/unannotated-autoquery-services.png)](http://northwind.servicestack.net/ss_admin/autoquery/QueryCustomers)
+[![](https://raw.githubusercontent.com/ServiceStack/Admin/master/img/unannotated-autoquery-services.png)](http://northwind.netcore.io/ss_admin/autoquery/QueryCustomers)
 
 ### Marking up AutoQuery Services
 
@@ -354,7 +354,7 @@ mobile and web apps using Server Events.
 Xamarin.Android Chat utilizes the 
 [.NET PCL Server Events Client](/csharp-server-events-client)
 to create an Android Chat App connecting to the existing 
-[chat.servicestack.net](http://chat.servicestack.net/) back-end where it's able to communicate with existing 
+[chat.netcore.io](http://chat.netcore.io/) back-end where it's able to communicate with existing 
 Ajax clients and other connected Android Chat Apps. The example shows how to enable a native integrated 
 experience by translating the existing `cmd.announce` message into an Android notification as well shows how to 
 use Xamarin.Auth to authenticate with ServiceStack using Twitter Auth. 
