--- a/docs/_releases/v4.0.58.md
+++ b/docs/_releases/v4.0.58.md
@@ -1189,9 +1189,9 @@ To demonstrate this functionality we've created a new
 [Redis GEO Live Demo](https://github.com/ServiceStackApps/redis-geo) which lets you click on anywhere in 
 the U.S. to find the list of nearest cities within a given radius:
 
-[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/livedemos/redis-geo/redisgeo-screenshot.png)](http://redisgeo.servicestack.net/)
+[![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/livedemos/redis-geo/redisgeo-screenshot.png)](http://redisgeo.netcore.io/)
 
-> Live Demo: http://redisgeo.servicestack.net
+> Live Demo: http://redisgeo.netcore.io
 
 Redis GEO just [imports postal data coordinates](https://github.com/ServiceStackApps/redis-geo/blob/master/README.md#import-geonames-dataset)
 for each State from the 
