--- a/docs/_releases/v4.5.2.md
+++ b/docs/_releases/v4.5.2.md
@@ -124,7 +124,7 @@ The Live Demos cover a broad spectrum of ServiceStack features including:
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://redisgeo.servicestack.net">redisgeo.servicestack.net</a></td>
+              <td><a href="http://redisgeo.netcore.io">redisgeo.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
@@ -168,7 +168,7 @@ The Live Demos cover a broad spectrum of ServiceStack features including:
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://chat.servicestack.net">chat.servicestack.net</a></td>
+              <td><a href="http://chat.netcore.io">chat.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
@@ -257,7 +257,7 @@ The Live Demos cover a broad spectrum of ServiceStack features including:
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://stackapis.servicestack.net">stackapis.servicestack.net</a></td>
+              <td><a href="http://stackapis.netcore.io">stackapis.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
@@ -342,7 +342,7 @@ The Live Demos cover a broad spectrum of ServiceStack features including:
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://todos.servicestack.net">todos.servicestack.net</a></td>
+              <td><a href="http://todos.netcore.io">todos.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
@@ -428,7 +428,7 @@ The Live Demos cover a broad spectrum of ServiceStack features including:
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://restfiles.servicestack.net">restfiles.servicestack.net</a></td>
+              <td><a href="http://restfiles.netcore.io">restfiles.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
@@ -473,7 +473,7 @@ The Live Demos cover a broad spectrum of ServiceStack features including:
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://northwind.servicestack.net">northwind.servicestack.net</a></td>
+              <td><a href="http://northwind.netcore.io">northwind.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
@@ -515,7 +515,7 @@ The Live Demos cover a broad spectrum of ServiceStack features including:
             <caption>ASP.NET 4.5</caption>
             <tr>
               <td>Live Demo:</td>
-              <td><a href="http://redisstackoverflow.servicestack.net">redisstackoverflow.servicestack.net</a></td>
+              <td><a href="http://redisstackoverflow.netcore.io">redisstackoverflow.netcore.io</a></td>
             </tr>
             <tr>
               <td>Github:</td>
@@ -768,7 +768,7 @@ of serving static files from the **WebRootPath** which just required moving all 
 And with that the Todos port was complete, which you can view from the deployed locations below:
 
  - [http://todos.netcore.io](http://todos.netcore.io)       - Linux / Docker / nginx / .NET Core
- - [http://todos.servicestack.net](http://todos.servicestack.net) - Windows / IIS / .NET 4.5 / ASP.NET
+ - [http://todos.netcore.io](http://todos.netcore.io) - Windows / IIS / .NET 4.5 / ASP.NET
 
 ## Seamless Integration with .NET Core
 
