--- a/docs/_releases/v4.5.8.md
+++ b/docs/_releases/v4.5.8.md
@@ -408,7 +408,7 @@ public void onPostCreate(Bundle savedInstanceState) {
 
 The primary difference between the C# and Java Android Chat Apps is how they're authenticated. In C# we utilize the
 [Xamarin.Auth](https://components.xamarin.com/view/xamarin.auth) component which wraps a WebView that initiates an 
-OAuth flow by navigating to the server's [chat.servicestack.net/auth/facebook](http://chat.servicestack.net/auth/facebook)
+OAuth flow by navigating to the server's [chat.netcore.io/auth/facebook](http://chat.netcore.io/auth/facebook)
 OAuth endpoint. After successful authentication the WebView is redirected back after creating an Authenticated User 
 Session on the server and populating [Session Cookies on the HTTP Response](/sessions). The Cookies are copied from 
 the WebView before being dismissed and used to populate the ServerEventsClient's Cookies so it's able to establish 
@@ -469,7 +469,7 @@ simply a matter of handling the Facebook `onSuccess()`, `onCancel()` and `onErro
 
 When the `onSuccess()` callback is fired it means the User has successfully Signed In locally into our Android App, 
 we then need to Authenticate with the 
-[ServiceStack Chat Server](http://chat.servicestack.net) by making an Authenticated request using the User's Facebook 
+[ServiceStack Chat Server](http://chat.netcore.io) by making an Authenticated request using the User's Facebook 
 `AccessToken`:
 
 ```java
@@ -656,14 +656,14 @@ The Web Example App built with less than **>100 lines of application code** that
 functionality maintained in **app.ts**: 
 
  - [app.ts](https://github.com/ServiceStackApps/typescript-server-events/blob/master/web/src/app.ts) - Entire App Logic
- - [dtos.ts](https://github.com/ServiceStackApps/typescript-server-events/blob/master/web/src/dtos.ts) - Server generated DTOs from [chat.servicestack.net/types/typescript](http://chat.servicestack.net/types/typescript)
+ - [dtos.ts](https://github.com/ServiceStackApps/typescript-server-events/blob/master/web/src/dtos.ts) - Server generated DTOs from [chat.netcore.io/types/typescript](http://chat.netcore.io/types/typescript)
  - [index.html](https://github.com/ServiceStackApps/typescript-server-events/blob/master/web/index.html) - Static HTML page
  - [default.css](https://github.com/ServiceStackApps/typescript-server-events/blob/master/web/default.css) - Static default.css styles
 
 ### Node.js Server App
 
 The [/node](https://github.com/ServiceStackApps/typescript-server-events/tree/master/node) server.js app
-has the same functionality as the Web App except instead of connecting to the [chat.servicestack.net](http://chat.servicestack.net) Events stream on the client, all connections are made in node.js and it's only the server state that's sent to the client, which it uses to render the UI.
+has the same functionality as the Web App except instead of connecting to the [chat.netcore.io](http://chat.netcore.io) Events stream on the client, all connections are made in node.js and it's only the server state that's sent to the client, which it uses to render the UI.
 
 As the functionality of the app remains the same, the Node.js App is able to reuse the Web App's existing 
 `dtos.ts`, `.html` and .`css`:
@@ -676,7 +676,7 @@ The difference is in the App's logic which is now split into 2 files, one for th
 now contains most of the App's functionality and another for the Web clients **app.ts**, now relegated to 
 periodically updating the UI with the node.js server state:
 
-- [server.ts](https://github.com/ServiceStackApps/typescript-server-events/blob/master/node/server.ts) - maintain all client and server events connection to [chat.servicestack.net](http://chat.servicestack.net)
+- [server.ts](https://github.com/ServiceStackApps/typescript-server-events/blob/master/node/server.ts) - maintain all client and server events connection to [chat.netcore.io](http://chat.netcore.io)
 - [app.ts](https://github.com/ServiceStackApps/typescript-server-events/blob/master/node/src/app.ts) - periodically render node.js state to HTML UI
 
 ### React Native Mobile App
@@ -702,7 +702,7 @@ React Apps can be built using just JavaScript as seen in the single **index.ios.
 App's entire functionality, layout and style in [<200 Lines of JavaScript](https://github.com/ServiceStackApps/typescript-server-events/blob/master/reactnative/index.ios.js):
 
  - [index.ios.js](https://github.com/ServiceStackApps/typescript-server-events/blob/master/reactnative/index.ios.js) - The entire App including all behavior, layout and styles
- - [dtos.js](https://github.com/ServiceStackApps/typescript-server-events/blob/master/reactnative/dtos.js) - Server DTOs from [chat.servicestack.net/types/typescript](http://chat.servicestack.net/types/typescript) and compiled into .js using `tsc`
+ - [dtos.js](https://github.com/ServiceStackApps/typescript-server-events/blob/master/reactnative/dtos.js) - Server DTOs from [chat.netcore.io/types/typescript](http://chat.netcore.io/types/typescript) and compiled into .js using `tsc`
 
 The smaller screen size means our React Native App adopts a more compact layout but otherwise retains
 similar functionality to the other Web Apps which looks like: 
@@ -813,7 +813,7 @@ public class MyGlobalReceiver : ServerEventReceiver
 ### Parameterless methods
 
 You can now invoke methods without arguments as seen with `Toggle()` below which can be used to handle 
-[Chat's](http://chat.servicestack.net/) `cmd.toggle` command, e.g:
+[Chat's](http://chat.netcore.io/) `cmd.toggle` command, e.g:
 
 ```csharp
 public class MyGlobalReceiver : ServerEventReceiver
