Remove references of templates.servicestack.net to GitHub repo

--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -1651,9 +1651,9 @@ using ServiceStack.Script;
 ```
 
 Which is effectively the [only changes](https://github.com/NetCoreApps/TemplatePages/commit/7f2fd9f22ef9d92927bd8dc8157f89b8195fdb6c) 
-that [templates.servicestack.net](http://templates.servicestack.net) needed to run on the latest version. 
+that [ServiceStack Templates](https://github.com/NetCoreApps/TemplatePages) needed to run on the latest version. 
 
-[templates.servicestack.net](http://templates.servicestack.net) still uses and documents the old `ServiceStack.Template` APIs whilst the 
+[ServiceStack Templates](https://github.com/NetCoreApps/TemplatePages) still uses and documents the old `ServiceStack.Template` APIs whilst the 
 new [sharpscript.net](https://sharpscript.net) is the new website for `#Script` which has been converted to use and document the new `ServiceStack.Script` APIs.
 
 To verify minimal disruption to existing APIs, most were converted into unit tests in 
@@ -1677,10 +1677,10 @@ which it provides an alternative to.
 
 Other re-branded features:
 
-- [API Pages](http://templates.servicestack.net/docs/api-pages) are now called [Sharp APIs](https://sharpscript.net/docs/sharp-apis)
-- [Web Apps](http://templates.servicestack.net/docs/web-apps) are now called [Sharp Apps](https://sharpscript.net/docs/sharp-apps)
-- Template [Filters](http://templates.servicestack.net/docs/filters) are now called [Script Methods](https://sharpscript.net/docs/methods)
-- Template [Blocks](http://templates.servicestack.net/docs/blocks) are now called [Script Blocks](https://sharpscript.net/docs/methods)
+- **API Pages** are now called [Sharp APIs](https://sharpscript.net/docs/sharp-apis)
+- **Web Apps** are now called [Sharp Apps](https://sharpscript.net/docs/sharp-apps)
+- **Template Filters** are now called [Script Methods](https://sharpscript.net/docs/methods)
+- **Template Blocks** are now called [Script Blocks](https://sharpscript.net/docs/methods)
 
 The collection of methods you inject in your scripts like `TemplateRedisFilters` and `TemplateDbFilters` are now referred to as "Scripts" 
 where they've been renamed to `RedisScripts` and `DbScripts`.
