--- a/docs/_releases/v5.7.md
+++ b/docs/_releases/v5.7.md
@@ -217,11 +217,11 @@ disruption possible by supporting both syntaxes in parallel over multiple releas
 which just involves replacing existing usages of `|` to use `|>`, e.g:
 
 ```hbs
-{{ 'shout' | upper | substring(2) | padRight(6, '_') | repeat(3) }}
+{% raw %}{{ 'shout' | upper | substring(2) | padRight(6, '_') | repeat(3) }}
 
 //to
 
-{{ 'shout' |> upper |> substring(2) |> padRight(6, '_') |> repeat(3) }}
+{{ 'shout' |> upper |> substring(2) |> padRight(6, '_') |> repeat(3) }}{% endraw %}
 ```
 
 When ready you can enforce that only the new `|>` syntax is used by disallowing `|` usage with:
@@ -759,10 +759,10 @@ used in [Live Documents](https://sharpscript.net/usecases/live-documents) you'll
 
 [![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/sharpscript/csv-block.png)](https://sharpscript.net/docs/blocks#csv)
 
-    {{#keyvalues monthlyRevenues ':'}}
+    {% raw %}{{#keyvalues monthlyRevenues ':'}}
         Salary:         4000
         App Royalties:  200
-    {{/keyvalues}}
+    {{/keyvalues}}{% endraw %}
 
 Likewise when used in `code` statements:
 
@@ -777,13 +777,13 @@ Likewise when used in `code` statements:
 But for blocks like [capture](https://sharpscript.net/docs/blocks#capture) which captures dynamically generated output, it's preferred the body be expressed using templates:
 
 ```hbs
-{{#capture out}}
+{% raw %}{{#capture out}}
     <ul>
     {{#each range(3)}}
         <li>{{it}}</li>
     {{/each}}
     </ul>
-{{/capture}}
+{{/capture}}{% endraw %}
 ```
 
 Even when used from within `code` statements:
@@ -812,12 +812,12 @@ Whilst the new [function blocks](https://sharpscript.net/docs/blocks#function) b
 Likewise when defined in "template" mode:
 
 ```hbs
-{{#function fib(num) }}
+{% raw %}{{#function fib(num) }}
     #if num <= 1
         return(num)
     /if
     return (fib(num-1) + fib(num-2))
-{{/function}}
+{{/function}}{% endraw %}
 ```
 
 None of this was possible with our previous naive implementation. In Razor terms, this is akin to trying to support using 
@@ -855,8 +855,8 @@ var output = await context.RenderCodeAsync("now |> dateFormat('HH:mm:ss')");
 These APIs match the high-level APIs for rendering normal `#Script`:
 
 ```csharp
-var output = context.RenderScript("{{ now |> dateFormat('HH:mm:ss') }}"); 
-var output = await context.RenderScriptAsync("{{ now |> dateFormat('HH:mm:ss') }}"); 
+{% raw %}var output = context.RenderScript("{{ now |> dateFormat('HH:mm:ss') }}"); 
+var output = await context.RenderScriptAsync("{{ now |> dateFormat('HH:mm:ss') }}");{% endraw %}
 ```
 
 ### Finer grained control
@@ -865,10 +865,10 @@ The high-level APIs above wraps the finer-grained functionality below which work
 language in a `PageResult` that all languages use:
 
 ```csharp
-var context = new ScriptContext().Init();
+{% raw %}var context = new ScriptContext().Init();
 var dynamicPage = context.CodeSharpPage("now |> dateFormat('HH:mm:ss')");           // render code
 //var dynamicPage = context.SharpScriptPage("{{ now |> dateFormat('HH:mm:ss') }}"); // render #Script
-var output = new PageResult(dynamicPage).RenderScript();
+var output = new PageResult(dynamicPage).RenderScript();{% endraw %}
 
 //async
 var output = await new PageResult(dynamicPage).RenderScriptAsync();
@@ -1415,8 +1415,8 @@ var output = await context.RenderLispAsync("(dateFormat now \"HH:mm:ss\")");
 These APIs match the high-level APIs for rendering normal `#Script`:
 
 ```csharp
-var output = context.RenderScript("{{ now |> dateFormat('HH:mm:ss') }}"); 
-var output = await context.RenderScriptAsync("{{ now |> dateFormat('HH:mm:ss') }}"); 
+{% raw %}var output = context.RenderScript("{{ now |> dateFormat('HH:mm:ss') }}"); 
+var output = await context.RenderScriptAsync("{{ now |> dateFormat('HH:mm:ss') }}");{% endraw %}
 ```
 
 ### Finer grained control
@@ -1425,7 +1425,7 @@ The high-level APIs above wraps the finer-grained functionality below which work
 language in a `PageResult` that all languages use:
 
 ```csharp
-var context = new ScriptContext {
+{% raw %}var context = new ScriptContext {
     ScriptLanguages = { ScriptLisp.Language }
 }.Init();
 var dynamicPage = context.LispSharpPage("(dateFormat now \"HH:mm:ss\")");          // render lisp
@@ -1433,7 +1433,7 @@ var dynamicPage = context.LispSharpPage("(dateFormat now \"HH:mm:ss\")");       
 var output = new PageResult(dynamicPage).RenderScript();
 
 //async
-var output = await new PageResult(dynamicPage).RenderScriptAsync();
+var output = await new PageResult(dynamicPage).RenderScriptAsync();{% endraw %}
 ```
 
 ### Evaluating Lisp Script Results
@@ -1928,7 +1928,7 @@ Another way to generate output from Lisp is to use its built-in print functions 
 
 A great resource for learning Script Lisp is seeing it in action by seeing how to implement **C#'s 101 LINQ Examples in Lisp**:
 
-<div class="text-center my-3">
+<div class="text-center py-3">
     <a href="/linq/restriction-operators?lang=lisp" class="btn btn-outline-primary btn-lg">Lisp LINQ Examples</a>
 </div>
 
